# CrappyKInectRadar

./: .gitignore  CMakeLists.txt  README.md  main.c
stepper_control/src/: main.ino
viewer/: CMakeLists.txt  main.cpp
